--- a/Changes
+++ b/Changes
@@ -1,5 +1,5 @@
 Revision history for Complete-Module
 
-0.01    2014-06-22 (SHARYANTO) (not yet released)
+0.01    2014-06-22 (SHARYANTO)
 
         - First release.
