--- a/Changes
+++ b/Changes
@@ -3,7 +3,8 @@ Revision history for Complete-Module
 0.06    2014-12-25 (PERLANCAR) - ♪ so this is xmas
 
 	- Use Complete::Path to avoid code duplication and gain features like
-          expand intermediate path and map case.
+          expand intermediate path (exp_im_path option) and map case (map_case
+          option).
 
         [REMOVED FEATURES]
 
