--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for Complete-Module
 
+0.14    2015-01-09 (PERLANCAR)
+
+	- No functional changes.
+
+	- Reupload to PAUSE to see if this time it gets indexed.
+
+
 0.13    2014-12-28 (PERLANCAR)
 
 	- No functional changes.
