--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Complete-Module
 
+0.16    2015-03-03 (PERLANCAR)
+
+	- Add option: path_sep.
+
+
 0.15    2015-01-13 (PERLANCAR)
 
 	- Add option: dig_leaf.
