--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Complete-Module
 
+0.20    2015-09-17 (PERLANCAR)
+
+	- Add fuzzy matching.
+
+
 0.19    2015-09-09 (PERLANCAR)
 
 	- No functional changes.
