--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Complete-Module
 
+0.21    2015-09-23 (PERLANCAR)
+
+	- Add default shortcut prefix: df (DateTime/Format/).
+
+
 0.20    2015-09-17 (PERLANCAR)
 
 	- Add fuzzy matching.
