--- a/Changes
+++ b/Changes
@@ -1,5 +1,13 @@
 Revision history for Complete-Module
 
+0.22    2015-10-08 (PERLANCAR)
+
+	- Add prefix shortcuts: dz (for Dist/Zilla/) and pw (for
+	  Pod/Weaver/).
+
+	- [Bugfix] Fix typo in Rinci metadata.
+
+
 0.21    2015-09-23 (PERLANCAR)
 
 	- Add default shortcut prefix: df (DateTime/Format/).
