--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+0.25    2017-07-11 (PERLANCAR)
+
+	- No functional changes.
+
+	- [test] Replace File::Slurp::Tiny with File::Slurper.
+
+
 0.24    2015-12-02 (PERLANCAR)
 
 	- No functional changes.
