--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+0.260   2017-09-08 (PERLANCAR)
+
+	- No functional changes.
+
+	- Replace List::MoreUtils (uniq) with List::Util.
+
+
 0.25    2017-07-11 (PERLANCAR)
 
 	- No functional changes.
