--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+0.261   2021-02-02  Released-By: PERLANCAR; Urgency: medium
+
+	- Update to Complete::Path 0.251 (add options 'recurse_matching',
+	  'exclude_leaf', 'exclude_dir').
+
+
 0.260   2017-09-08  Released-By: PERLANCAR
 
 	- No functional changes.
