--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.262   2021-02-06  Released-By: PERLANCAR; Urgency: medium
+
+	- Add options: ns_prefixes.
+
+
 0.261   2021-02-02  Released-By: PERLANCAR; Urgency: medium
 
 	- Update to Complete::Path 0.251 (add options 'recurse_matching',
